<resources>
    <string name="app_name">RBS</string>
    <string name="versionCode">1116</string>
    <string name="versionName">1.3.9</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
    <string name="thai">ภาษาไทย</string>
    <string name="tv_hotel_login">IPTV Login</string>
    <string name="btn_login">Login</string>
    <string name="tv_live">Live</string>
    <string name="tv_vod">Vod</string>
    <string name="tv_cuisines">Cuisines</string>
    <string name="tv_services">Services</string>
    <string name="tv_setting">Setting</string>
    <string name="tv_scnenrise">Sceneries</string>
    <string name="tv_expense">Expense</string>
    <string name="exitdialog_out">Exit</string>
    <string name="exitdialog_back">See again</string>
    <string name="exitdialog_hint">Exit hints</string>
    <string name="exitdialog_out_hint">Do you really want to quit?</string>
    <string name="system_setting">System setting</string>
    <string name="ip_setting">Server address setting</string>
    <string name="login_setting">Login setting</string>
    <string name="label_setting_host_tips">It is used to modify the server address connected to set-top box.
        Any errors during modification might lead to connection fail and set-top box can’t work correctly.
        To change the server address, please consult your local operator to check the new address to ensure set-top boxes work properly.</string>
    <string name="submit">Submit</string>
    <string name="recovery_address">Restore the default address</string>
    <string name="server_address">Server address</string>
    <string name="room_number">Room number</string>
    <string name="device_id">Device ID:</string>
    <string name="version">Version:</string>
    <string name="error">The program is running down...</string>
    <string name="click_again_to_welcome_activity">Click back to the welcome interface again</string>
    <string name="play_setting">Play Setting</string>
    <string name="update_setting">Update Setting</string>
    <string name="about_us">About Us</string>
    <string name="report_setting">Report Setting</string>
    <string name="click_again_to_exit_playback">Click again to exit playback</string>
    <string name="cctv_news">19:00 CCTV News</string>
    <string name="animal_world">20:00 Animal World</string>
    <string name="check_update">Checking update now......</string>
    <string name="yes">Yes</string>
    <string name="current_version">Current Version</string>
    <string name="find_new_version">Find new version</string>
    <string name="new_version">new version</string>
    <string name="cancel">cancel</string>
    <string name="chinese_food">Chinese food</string>
    <string name="france_food">French food</string>
    <string name="japan_food">Japan food</string>
    <string name="korea_food">Korea food</string>
    <string name="xiaochi">Dessert snack</string>
    <string name="caffe_tea">Coffee and tea</string>
    <string name="latast_version">You have the latast version</string>
    <string name="wakeup_service">Wake-up service</string>
    <string name="laundry_service">Laundry service</string>
    <string name="polish_shoes">Polish shoes</string>
    <string name="beauty_service">Beauty service</string>
    <string name="flight_service">Flight service</string>
    <string name="fitness_Service">Fitness Service</string>
    <string name="welcome_text">        It is our service tenet that you are here at XXX hotel. During your stay, we will provide the perfect service for you, make you feel warm and sincere service, we would like to give you a good impression. \n
            Wish you a pleasant journey, business success, good luck in everything! \n
            Welcome to your visit again!</string>
    <string name="respected_customers">Respected customers</string>
    <string-array name="day_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="live_category">
        <item>CCTV</item>
        <item>Provincial TV</item>
        <item>Local TV</item>
        <item>Pay Program</item>
    </string-array>
    <string-array name="vod_category">
        <item>Search</item>
        <item>All</item>
        <item>Filter</item>
        <item>Guess you like</item>
        <item>Hongkong film</item>
        <item>Animated film</item>
        <item>Science film</item>
        <item>American film</item>
        <item>Comedy</item>
        <item>Love film</item>
        <item>Good film</item>
    </string-array>
    <string name="ijkplayer_dummy"></string>
    <string name="pref_title_general">General</string>
    <string name="pref_key_enable_background_play">pref.enable_background_play</string>
    <string name="pref_title_enable_background_play">Enable background play</string>
    <string name="pref_summary_enable_background_play">need Android 4.0+</string>
    <string name="pref_key_using_android_player">pref.using_android_player</string>
    <string name="pref_title_using_android_player">Using system player</string>
    <string name="pref_summary_using_android_player"></string>
    <string name="pref_key_player">pref.player</string>
    <string name="pref_title_player">Choose Player</string>
    <string-array name="pref_entries_player">
        <item>Auto Select</item>
        <item>AndroidMediaPlayer</item>
        <item>IjkMediaPlayer</item>
        <item>IjkExoMediaPlayer</item>
    </string-array>
    <string-array name="pref_entry_values_player">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="pref_entry_summaries_player">
        <item>Auto Select</item>
        <item>AndroidMediaPlayer</item>
        <item>IjkMediaPlayer</item>
        <item>IjkExoMediaPlayer</item>
    </string-array>
    <string name="pref_title_ijkplayer_video">Video: ijkplayer</string>
    <string name="pref_key_using_media_codec">pref.using_media_codec</string>
    <string name="pref_title_using_media_codec">Using MediaCodec</string>
    <string name="pref_summary_using_media_codec"></string>
    <string name="pref_key_using_media_codec_auto_rotate">pref.using_media_codec_auto_rotate</string>
    <string name="pref_title_using_media_codec_auto_rotate">Using MediaCodec auto rotate</string>
    <string name="pref_summary_using_media_codec_auto_rotate"></string>
    <string name="pref_key_media_codec_handle_resolution_change">pref.media_codec_handle_resolution_change</string>
    <string name="pref_title_media_codec_handle_resolution_change">MediaCodec handle resolution change</string>
    <string name="pref_summary_media_codec_handle_resolution_change"></string>
    <string name="pref_key_pixel_format">pref.pixel_format</string>
    <string name="pref_title_pixel_format">Pixel Format</string>
    <string-array name="pref_entries_pixel_format">
        <item>Auto Select</item>
        <item>RGB 565</item>
        <item>RGB 888</item>
        <item>RGBX 8888</item>
        <item>YV12</item>
        <item>OpenGL ES2</item>
    </string-array>
    <string-array name="pref_entry_values_pixel_format">
        <item></item>
        <item>fcc-rv16</item>
        <item>fcc-rv24</item>
        <item>fcc-rv32</item>
        <item>fcc-yv12</item>
        <item>fcc-_es2</item>
    </string-array>
    <string-array name="pref_entry_summaries_pixel_format">
        <item>Auto Select</item>
        <item>RGB 565</item>
        <item>RGB 888</item>
        <item>RGBX 8888</item>
        <item>YV12</item>
        <item>OpenGL ES2</item>
    </string-array>
    <string name="pref_title_ijkplayer_audio">Audio: ijkplayer</string>
    <string name="pref_key_using_opensl_es">pref.using_opensl_es</string>
    <string name="pref_title_using_opensl_es">Using OpenSL ES</string>
    <string name="pref_summary_using_opensl_es"></string>
    <string name="pref_title_render_view">RenderView</string>
    <string name="pref_key_enable_no_view">pref.enable_no_view</string>
    <string name="pref_title_enable_no_view">Enable NoView</string>
    <string name="pref_summary_enable_no_view"></string>
    <string name="pref_key_enable_surface_view">pref.enable_surface_view</string>
    <string name="pref_title_enable_surface_view">Enable SurfaceView</string>
    <string name="pref_summary_enable_surface_view"></string>
    <string name="pref_key_enable_texture_view">pref.enable_texture_view</string>
    <string name="pref_title_enable_texture_view">Enable TextureView</string>
    <string name="pref_summary_enable_texture_view"></string>
    <string name="pref_key_enable_detached_surface_texture">pref.enable_detached_surface_texture</string>
    <string name="pref_title_enable_detached_surface_texture">Enable detached SurfaceTexture</string>
    <string name="pref_summary_enable_detached_surface_texture"></string>
    <string name="pref_title_misc">Misc</string>
    <string name="pref_key_using_mediadatasource">pref.using_mediadatasource</string>
    <string name="pref_title_using_mediadatasource">Using MediaDataSource</string>
    <string name="pref_summary_using_mediadatasource"></string>
    <string name="pref_key_last_directory"></string>
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>
    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>
    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
</resources>