<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_181818"
    android:focusable="false"
    tools:context=".ui.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="1200px"
        android:layout_height="600px"
        android:layout_centerInParent="true"
        android:background="@color/transparent"
        android:focusable="false">

        <ImageView
            android:id="@+id/img_bg_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:focusable="false"
            android:scaleType="centerCrop"
            android:background="@color/color_181818"
            tools:src="@drawable/bg_login" />

        <TextView
            android:id="@+id/tv_hotel_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36px"
            android:focusable="false"
            android:text="@string/tv_hotel_login"
            android:textColor="@color/white"
            android:textSize="48px"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_above="@id/btn_system_setting"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24px"
            android:layout_marginLeft="32px"
            android:layout_marginRight="32px"
            android:background="@drawable/btn_background1"
            android:focusable="true"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="40px" />

        <Button
            android:id="@+id/btn_system_setting"
            android:layout_width="wrap_content"
            android:layout_height="80px"
            android:layout_above="@id/tv_deviceID"
            android:layout_marginBottom="24px"
            android:layout_marginLeft="32px"
            android:background="@drawable/btn_background1"
            android:focusable="true"
            android:paddingLeft="40px"
            android:paddingRight="40px"
            android:text="@string/system_setting"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="40px" />

        <Button
            android:id="@+id/btn_login_setting"
            android:layout_width="wrap_content"
            android:layout_height="80px"
            android:layout_above="@id/tv_version"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="24px"
            android:layout_marginRight="32px"
            android:background="@drawable/btn_background1"
            android:focusable="true"
            android:paddingLeft="40px"
            android:paddingRight="40px"
            android:text="@string/login_setting"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="40px" />

        <TextView
            android:id="@+id/tv_deviceID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="32px"
            android:layout_marginLeft="32px"
            android:focusable="false"
            android:text="@string/device_id"
            android:textColor="@color/white"
            android:textSize="32px" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="32px"
            android:layout_marginRight="32px"
            android:focusable="false"
            android:text="@string/version"
            android:textColor="@color/white"
            android:textSize="32px" />

    </RelativeLayout>

</RelativeLayout>