<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_667788"
    android:focusable="false">

    <TextView
        android:id="@+id/tv_server_address"
        android:layout_width="300px"
        android:layout_height="140px"
        android:layout_marginLeft="250px"
        android:layout_marginTop="60px"
        android:background="@drawable/input_green_normal"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/server_address"
        android:textColor="@color/white"
        android:textSize="36px" />

    <EditText
        android:id="@+id/edit_ip"
        android:layout_width="800px"
        android:layout_height="140px"
        android:layout_marginLeft="40px"
        android:layout_marginTop="60px"
        android:layout_toRightOf="@id/tv_server_address"
        android:background="@drawable/input_green_normal"
        android:focusable="true"
        android:text="http://192.168.1.109:9080/api/"
        android:textColor="@color/white"
        android:textSize="36px" />

    <Button
        android:id="@+id/btn_submit_ip"
        android:layout_width="240px"
        android:layout_height="140px"
        android:layout_marginLeft="40px"
        android:layout_marginTop="60px"
        android:layout_toRightOf="@id/edit_ip"
        android:background="@drawable/input_green_normal"
        android:focusable="true"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="36px" />

    <TextView
        android:id="@+id/tv_room_number"
        android:layout_width="300px"
        android:layout_height="140px"
        android:layout_below="@id/tv_server_address"
        android:layout_marginLeft="250px"
        android:layout_marginTop="32px"
        android:background="@drawable/input_green_normal"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/room_number"
        android:textColor="@color/white"
        android:textSize="36px" />

    <EditText
        android:id="@+id/edit_room"
        android:layout_width="800px"
        android:layout_height="140px"
        android:layout_below="@id/edit_ip"
        android:layout_marginLeft="40px"
        android:layout_marginTop="28px"
        android:layout_toRightOf="@id/tv_room_number"
        android:background="@drawable/input_green_normal"
        android:focusable="true"
        android:text="501"
        android:textColor="@color/white"
        android:textSize="36px" />

    <Button
        android:id="@+id/btn_submit_room"
        android:layout_width="240px"
        android:layout_height="140px"
        android:layout_below="@id/btn_submit_ip"
        android:layout_marginLeft="40px"
        android:layout_marginTop="32px"
        android:layout_toRightOf="@id/edit_room"
        android:background="@drawable/input_green_normal"
        android:focusable="true"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="36px" />

    <Button
        android:id="@+id/btn_recovery"
        android:layout_width="1200px"
        android:layout_height="140px"
        android:layout_below="@id/btn_submit_room"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32px"
        android:background="@drawable/input_green_normal"
        android:focusable="true"
        android:text="@string/recovery_address"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="36px" />

    <LinearLayout
        android:layout_width="1200px"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_recovery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32px"
        android:background="@drawable/input_green_normal"
        android:focusable="false"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16px">

        <ImageView
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_marginTop="24px"
            android:focusable="false"
            android:src="@drawable/ic_alert" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16px"
            android:focusable="false"
            android:paddingLeft="16px"
            android:paddingRight="16px"
            android:text="@string/label_setting_host_tips"
            android:textColor="@color/white"
            android:textSize="40px" />

    </LinearLayout>
</RelativeLayout>