<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_181818"
    android:focusable="false"
    android:paddingTop="50px"
    tools:context="com.wanlong.iptv.ui.activity.HomeActivity">

    <!--子控件跟随父控件状态改变-->
    <!--android:duplicateParentState="true"-->
    <!--去掉TextView上下默认留白-->
    <!--android:includeFontPadding="false"-->
    <TextView
        android:id="@+id/tv_welcome_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60px"
        android:focusable="false"
        android:includeFontPadding="false"
        android:text="Welcome Mr.Wang"
        android:textColor="@color/white"
        android:textSize="40px" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="60px"
        android:focusable="false"
        android:textColor="@color/white"
        android:textSize="36px"
        tools:text="2018/2/25 09:06 Sunday" />

    <com.wanlong.iptv.ui.weigets.RoundImageView
        android:id="@+id/img_show"
        android:layout_width="1152px"
        android:layout_height="720px"
        android:layout_below="@id/tv_welcome_guest"
        android:layout_marginLeft="60px"
        android:layout_marginTop="12px"
        android:focusable="false"
        android:scaleType="centerCrop"
        tools:src="@drawable/hotel_room" />

    <com.wanlong.iptv.ui.weigets.RoundImageView
        android:id="@+id/img_weather"
        android:layout_width="560px"
        android:layout_height="280px"
        android:layout_alignRight="@id/tv_time"
        android:layout_alignTop="@id/img_show"
        android:layout_marginLeft="30px"
        android:layout_toRightOf="@id/img_show"
        android:focusable="false"
        android:scaleType="centerCrop"
        tools:src="@drawable/weather" />

    <com.wanlong.iptv.ui.weigets.RoundImageView
        android:id="@+id/img_ad"
        android:layout_width="560px"
        android:layout_height="400px"
        android:layout_alignBottom="@id/img_show"
        android:layout_alignRight="@id/tv_time"
        android:layout_below="@id/img_weather"
        android:layout_marginLeft="30px"
        android:layout_marginTop="30px"
        android:layout_toRightOf="@id/img_show"
        android:focusable="false"
        android:scaleType="centerCrop"
        tools:src="@drawable/sence" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100px"
        android:focusable="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_live"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2px"
            android:layout_weight="1"
            android:background="@drawable/btn_background1"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/tv_live"
            android:textColor="@color/white"
            android:textSize="36px" />

        <TextView
            android:id="@+id/tv_vod"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2px"
            android:layout_marginRight="2px"
            android:layout_weight="1"
            android:background="@drawable/btn_background1"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/tv_vod"
            android:textColor="@color/white"
            android:textSize="36px" />

        <TextView
            android:id="@+id/tv_services"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2px"
            android:layout_marginRight="2px"
            android:layout_weight="1"
            android:background="@drawable/btn_background1"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/tv_services"
            android:textColor="@color/white"
            android:textSize="36px" />

        <TextView
            android:id="@+id/tv_cuisines"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2px"
            android:layout_marginRight="2px"
            android:layout_weight="1"
            android:background="@drawable/btn_background1"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/tv_cuisines"
            android:textColor="@color/white"
            android:textSize="36px" />

        <TextView
            android:id="@+id/tv_scnenries"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2px"
            android:layout_marginRight="2px"
            android:layout_weight="1"
            android:background="@drawable/btn_background1"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/tv_scnenrise"
            android:textColor="@color/white"
            android:textSize="36px" />

        <TextView
            android:id="@+id/tv_expense"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2px"
            android:layout_marginRight="2px"
            android:layout_weight="1"
            android:background="@drawable/btn_background1"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/tv_expense"
            android:textColor="@color/white"
            android:textSize="36px" />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2px"
            android:layout_weight="1"
            android:background="@drawable/btn_background1"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/tv_setting"
            android:textColor="@color/white"
            android:textSize="36px" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_alignParentBottom="true"
        android:focusable="false">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_room"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="60px"
            android:focusable="false"
            android:gravity="center"
            android:text="Room：501"
            android:textColor="@color/white"
            android:textSize="36px" />

        <com.wanlong.iptv.ui.weigets.MarqueeTextView
            android:id="@+id/tv_message"
            android:layout_width="800px"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="60px"
            android:layout_marginTop="32px"
            android:focusable="false"
            android:gravity="center"
            android:lines="1"
            android:textColor="@color/white"
            android:textSize="36px"
            tools:text="You have a new message. Please check it." />

    </RelativeLayout>

</RelativeLayout>
